--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NetOS | Главная страница Глобальной сети</title>
     <link rel="stylesheet" href="css/style.css">
-    <link type="image/x-icon" rel="shortcut icon" href="img/favicon/icon.svg">
+    <link rel="icon" href="img/favicon/icon.svg">
     <link type="image/png" sizes="16x16" rel="icon" href="img/favicon/favicon16.png">
     <link type="image/png" sizes="32x32" rel="icon" href="img/favicon/favicon32.png">
     <link type="image/png" sizes="48x48" rel="icon" href="img/favicon/favicon48.png">
